--- a/content.html
+++ b/content.html
@@ -2,7 +2,7 @@
 
 <h2>History of Matplotlib</h2>
 
-<p>Matplotlib began as an emulation of MATLAB's plotting capabilities (hence the name "Matplotlib" which is a portmanteau of "MATLAB", "plotting", and "library"). However, it has since evolved into a comprehensive library supporting numerous plot types and customization options and is entirely independent on MATLAB.</p>
+<p>Matplotlib began as an emulation of MATLAB's plotting capabilities (hence the name "Matplotlib" which is a portmanteau of "MATLAB", "plotting", and "library"). However, it has since evolved into a comprehensive library supporting numerous plot types and customization options and is entirely independent of MATLAB.</p>
 
 <h2>Examples</h2>
 
