Added Matplotlib logo

--- a/content.html
+++ b/content.html
@@ -1,3 +1,5 @@
+<img src="resources/matplotlib_logo.png" alt="Matplotlib Logo" width="600px"/>
+
 <p>Matplotlib is a widely used Python library for creating visualizations. It provides a flexible platform for generating a variety of plots and charts, making it an essential tool for data analysis and presentation. Matplotlib is open-source and free to use.</p>
 
 <h2>History of Matplotlib</h2>
